# My-Bookstore

./: .gitignore  2026_06_16_ServerLog  2026_06_29_ServerLog  2026_06_30_ServerLog  AGENTS.md  CMakeLists.txt  Makefile  README.md  start.sh
.github/workflows/: ci.yml
client/: fans.html  index.html  judge.html  log.html  logError.html  picture.html  register.html  registerError.html  video.html  welcome.html
client/css/: app.css  pages.css
client/js/: api.js  app.js
deploy/docker/: Dockerfile  docker-compose.yml
deploy/docker/nginx/: generate-cert.sh  nginx.conf
deploy/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml  service.yaml
deploy/k8s/mysql/: service.yaml  statefulset.yaml
docs/: ecommerce_api.md  protobuf_contracts.md
include/tinyweb/: http.hpp  log.hpp  server.hpp
proto/book/v1/: book.proto
proto/common/v1/: common.proto
proto/inventory/v1/: inventory.proto
proto/order/v1/: order.proto
proto/user/v1/: user.proto
scripts/: build.sh  init.sql  start_server.sh  verify_inventory_grpc_e2e.sh
src/app/: api_gateway.h
src/app/client/: book_client.h  grpc_book_client.cpp  grpc_book_client.h  grpc_inventory_client.cpp  grpc_inventory_client.h  grpc_order_client.cpp  grpc_order_client.h  grpc_user_client.cpp  grpc_user_client.h  inventory_client.h  local_book_client.h  local_inventory_client.h  local_order_client.h  local_user_client.h  order_client.h  user_client.h
src/app/controller/: auth_controller.h  book_controller.h  inventory_controller.h  order_controller.h  recommend_controller.h
src/app/grpc/: book_grpc_service.cpp  book_grpc_service.h  book_server_main.cpp  inventory_grpc_service.cpp  inventory_grpc_service.h  inventory_server_main.cpp  order_grpc_service.cpp  order_grpc_service.h  order_server_main.cpp  user_grpc_service.cpp  user_grpc_service.h  user_server_main.cpp
src/app/model/: book.h  inventory.h  order.h  user.h
src/app/recommend/: book_embedder.h  book_vector_index.cpp  book_vector_index.h
src/app/repository/: book_repository.h  inventory_repository.h  order_repository.h  user_repository.h
src/app/repository/memory/: memory_repositories.h
src/app/repository/mysql/: mysql_repositories.cpp  mysql_repositories.h
src/app/service/: book_service.h  inventory_service.h  order_service.h  recommend_service.h  user_service.h
src/app/util/: json.h  sha256.h
src/core/: config.cpp  config.h  main.cpp  static_root.h  webserver.cpp  webserver.h
src/db/: README.md  redis_user_cache.cpp  redis_user_cache.h  sql_connection_pool.cpp  sql_connection_pool.h  user_cache.cpp  user_cache.h
src/log/: block_queue.h  log.cpp  log.h
src/net/http/: http_conn.cpp  http_conn.h  http_request.h  http_response.h  router.h  url_params.h
src/pool/: threadpool.h
src/timer/: lst_timer.cpp  lst_timer.h
src/util/: semaphore.h
test/: CMakeLists.txt  test_block_queue.cpp  test_book_catalog.cpp  test_business_backend_apis.cpp  test_database_schema.cpp  test_deploy_runtime_contracts.cpp  test_ecommerce_flow.cpp  test_http_router.cpp  test_inventory_gateway_client.cpp  test_inventory_grpc_service.cpp  test_inventory_grpc_wiring.cpp  test_inventory_runtime_config.cpp  test_mysql_repository_wiring.cpp  test_order_gateway_client.cpp  test_order_grpc_service.cpp  test_order_grpc_wiring.cpp  test_order_inventory_client.cpp  test_proto_contracts.cpp  test_recommend_index.cpp  test_redis_user_cache.cpp  test_repository_services.cpp  test_semaphore.cpp  test_static_root.cpp  test_url_params.cpp  test_user_book_gateway_client.cpp  test_user_book_grpc_service.cpp  test_user_book_grpc_wiring.cpp
